--- a/test-scss/scss/page/main.scss
+++ b/test-scss/scss/page/main.scss
@@ -107,7 +107,16 @@ body {
 
                 }
             }
-
+            &.lector {
+                &.active {
+                    color: $blue;
+    
+                    &:after {
+                        opacity: 1;
+                        transition: width 0.3s ease 0s, left 0.3s ease 0s;
+                    }
+                }
+            }
             &.active {
                 color: $black;
 
