--- a/test-scss/scss/variables/_inputs.scss
+++ b/test-scss/scss/variables/_inputs.scss
@@ -33,6 +33,9 @@
         border: 1px solid transparent;
 
     }
+    &::placeholder {
+        color: #9E9E9E;
+    }
 }
 
 .search-input-parent {
