--- a/test-scss/scss/variable.scss
+++ b/test-scss/scss/variable.scss
@@ -66,6 +66,7 @@ $number_varriables:(
     '25': 25px,
     '28': 28px,
     '30': 30px,
+    '33': 33px,
     '35': 35px,
     '40': 40px,
     '48': 48px,
