--- a/test-scss/scss/page/responsive.scss
+++ b/test-scss/scss/page/responsive.scss
@@ -26,7 +26,7 @@
     }
 
     body {
-        padding-top: 52px !important;
+        padding-top: 58px !important;
     }
 
     .burger-menu {
@@ -60,20 +60,24 @@
             font-size: 12px !important;
         }
     }
-    .burger-menu-child{
+
+    .burger-menu-child {
         padding-top: 20px !important
     }
+
     .course__dropper {
         background-color: $white !important;
         border: 1px solid $border !important;
     }
-    .color-texts{
+
+    .color-texts {
         font-size: 12px !important;
         height: 70px;
         display: flex;
         align-items: center;
         justify-content: center;
     }
+
     .filter__block {
         grid-template-columns: repeat(2, 1fr) !important;
 
@@ -204,7 +208,7 @@
         }
     }
 
-    .course2_finish::after {
+    .teams .course2_finish::after {
         display: none;
     }
 
@@ -214,6 +218,24 @@
 
     .like__remove {
         font-size: 12px !important;
+
+        &.course {
+            font-size: 14px !important;
+        }
+    }
+
+    .bdr {
+        .row-left,
+        .row-right {
+            top: 50% !important;
+        }
+
+    }
+    .carousel-item .childs{
+        height: 400px !important;
+    }
+    .course_2-block .coure_2 {
+        min-height: 165px !important;
     }
 
     .prizes .number {
@@ -229,6 +251,10 @@
     .f-30 {
         font-size: 24px !important;
         line-height: 29px !important;
+    }
+
+    .lh-33 {
+        line-height: 19px !important;
     }
 
     .f-24,
@@ -254,10 +280,12 @@
         font-size: 25px !important;
         line-height: 30px !important;
     }
+
     .py-60_page {
         padding-top: 30px !important;
-        padding-bottom: 30px !important;	
+        padding-bottom: 30px !important;
     }
+
     .center {
         padding: 0 37px !important;
     }
@@ -353,10 +381,47 @@
     .py-60 {
         padding-top: 30px !important;
         padding-bottom: 50px !important;
+
+        &.teams__section {
+            padding-bottom: 10px !important;
+        }
+    }
+
+    .offers__section .block .bottom__img {
+        bottom: -20px !important;
+        height: 28px !important;
+    }
+
+    .course_lector {
+        .left__side {
+            position: relative;
+
+            &::after {
+                content: '';
+                position: absolute;
+                height: 60%;
+                top: 0;
+                left: 0;
+                z-index: 10;
+                background-color: #F3F3F4;
+                width: 100%;
+            }
+
+            .img-block {
+                position: relative;
+                z-index: 12;
+            }
+        }
+    }
+    .indicators .rows {
+        height: 85px !important;
     }
 }
 
 @media only screen and (max-width: 576px) {
+    .carousel-item .childs {
+        height: 250px !important;
+    }
     .filter__block {
         grid-template-columns: repeat(1, 1fr) !important;
 
