--- a/test-scss/scss/page/responsive.scss
+++ b/test-scss/scss/page/responsive.scss
@@ -214,6 +214,7 @@
 
     .course_2-block .coure_2 p {
         opacity: 1 !important;
+        max-height: initial !important;
     }
 
     .like__remove {
@@ -388,7 +389,7 @@
     }
 
     .offers__section .block .bottom__img {
-        bottom: -20px !important;
+        bottom: -17px !important;
         height: 28px !important;
     }
 
