--- a/davaleba-omedia/scss/base.scss
+++ b/davaleba-omedia/scss/base.scss
@@ -1,14 +1,9 @@
 @import './variable.scss';
+@import './mixin.scss';
 .header-center {
 	max-width: 1280px;
 	width: 100%;
 	margin:0 auto;
-}
-.center {
-	width: 100%;
-	max-width: 1160px;
-	margin: 0 auto;
-	display: block;
 }
 
 .transition {
@@ -141,6 +136,7 @@ a {
 	background-color: $red;
 	border: none;
 	padding:11px 24px;
+	white-space: nowrap;
 	&.slide {
 		color: $blue;
 		background-color: $white;
@@ -153,20 +149,18 @@ a {
 		// }
 	}
 }
-.underline__row {
-	position: relative;
-	&::after {
-		content: '';
-		position: absolute;
-		bottom: -15px;
-		background-color: $red;
-		height: 4px;
-		border-radius: 40px;
-		width: 50px;
-		left: 50%;
-		transform: translateX(-50%);
+.scroll__overlay {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	height: 20px;
+	width: 100%;
+	z-index: 200;
+	&.home {
+		bottom: 22px;
 	}
 }
 body {
 	padding-bottom: 60px;
+	padding-top: 140px;
 }
